# whiteboarder

./: .canine.yml  Dockerfile  Dockerfile.dev  README.md
whiteboarder/: Cargo.toml
whiteboarder/assets/: .index.html.swp  index.html  script.js  styles.css
whiteboarder/assets/favicon/: site.webmanifest
whiteboarder/src/: data.rs  drawing.rs  main.rs  websockets.rs
