[package]
name = "whiteboarder"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5.0", features = ["full"] }
dotenv = "0.15"
redis = { version = "0.25.3", features = ["tokio-comp"] }
uuid = "1.1.2"
tower = "0.4.13"
tokio-util = "0.7.11"
tera = "1.20.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
